--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-exclude: ['vendor', 'Gemfile', 'Gemfile.lock', 'material']
+exclude: ['app', 'vendor', 'Gemfile', 'Gemfile.lock', 'material', 'node_modules', 'package.json', 'Gruntfile.js']
