--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.4"
+    "gulp-watch": "^4.3.4",
+    "webpack": "^1.11.0",
+    "webpack-stream": "^2.1.0"
+  },
+  "dependencies": {
+    "page": "^1.6.3",
+    "promise": "^7.0.4"
   }
 }
