--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-eslint": "^1.0.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-mocha": "^2.1.3",
     "gulp-notify": "^2.2.0",
