--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
+    "eslint": "^1.2.1",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
@@ -41,6 +42,7 @@
     "webpack-stream": "^2.1.0"
   },
   "dependencies": {
+    "jquery": "^2.1.4",
     "page": "^1.6.3",
     "promise": "^7.0.4"
   }
