--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
     "eslint": "^1.2.1",
+    "eslint-loader": "^1.0.0",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^1.0.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^0.10.0",
@@ -37,13 +36,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.4",
     "webpack": "^1.11.0",
     "webpack-stream": "^2.1.0"
   },
   "dependencies": {
     "jquery": "^2.1.4",
     "page": "^1.6.3",
-    "promise": "^7.0.4"
+    "promise": "^7.0.4",
+    "underscore": "^1.8.3"
   }
 }
