--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
+    "css-loader": "^0.23.1",
     "eslint": "^1.2.1",
     "eslint-loader": "^1.0.0",
+    "file-loader": "^0.8.5",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
@@ -36,6 +38,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.11.0",
     "webpack-stream": "^2.1.0"
   },
