Remove npm modules

--- a/package.json
+++ b/package.json
@@ -16,26 +16,6 @@
     "url": "https://github.com/yukisov/yukisov.github.io/issues"
   },
   "homepage": "https://github.com/yukisov/yukisov.github.io",
-  "devDependencies": {
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
-    "bootstrap": "^3.3.7",
-    "css-loader": "^0.23.1",
-    "eslint": "^1.2.1",
-    "eslint-loader": "^1.9.0",
-    "file-loader": "^0.8.5",
-    "font-awesome": "^4.4.0",
-    "less": "^2.7.3",
-    "less-loader": "^2.2.3",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.9",
-    "webpack": "^1.15.0",
-    "webpack-stream": "^2.1.0"
-  },
-  "dependencies": {
-    "jquery": "^2.1.4",
-    "page": "^1.10.2",
-    "promise": "^7.3.1",
-    "underscore": "^1.9.1"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
